# adds-ai-terminal

./: LICENSE  README.md  pyproject.toml
data/: kb.yaml  presets.yaml  system_prompt.txt
docs/: adds-terminal.md  pi-deploy.md  serial-dev.md
scripts/: deploy_pi.sh  pty_pair.sh  run_dev.sh
src/adds_ai/: __init__.py  ansi.py  app.py  config.py  llm_openai.py  prompts.py  retrieval.py  ttyio.py
systemd/: adds-ai.service
